--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -551,7 +551,8 @@ splom(~EDA[,sapply(EDA, is.numeric)],
 |      **[B.2]** <span style="color: #FF0000">ntrees</span> = number of binary trees to build for the model held constant at a value of 4.
 |      **[B.3]** <span style="color: #FF0000">missing_action</span> = method of handling missing data at both fitting and prediction time held constant at a value of "FAIL".
 |
-| **[C]** The algorithm identified 4 informative clusters containing a subset of points, with the rest identified as outliers. For non-outliers, the Rand Index was determined by comparing the similarity between the cancer groupings and the cluster membership. 
+| **[C]** Using the label information from the <span style="color: #FF0000">Status</span> variable defined prior to the analysis, the algorithm was able to sufficiently discriminate between <span style="color: #FF0000">Status=Outlier</span> and <span style="color: #FF0000">Status=Valid</span>, as demonstrated by their differentially expressed deviance score densities.
+|      **[C.1]** ROC Curve AUC = 0.70765
 |
 ```{r section_1.5.1, warning=FALSE, message=FALSE}
 ##################################
@@ -622,13 +623,29 @@ Plot_Space_Range(OD_IF_DevianceScores,
 OD_IF_PredictedScores <- predict(OD_IF, OD)
 
 ##################################
+# Exploring the outlier scores
+# between the valid and outlier points
+##################################
+max(OD_IF_PredictedScores)
+min(OD_IF_PredictedScores)
+
+DR_PCA_SUBSET$Scores <- OD_IF_PredictedScores
+DR_PCA_SUBSET$Label <- rep("IF", nrow(DR_PCA_SUBSET))
+
+densityplot( ~ Scores | Label,
+            data = DR_PCA_SUBSET,
+            groups = Status,
+            xlab = "Deviance Scores",
+            ylab = "Desnity",
+            auto.key = list(columns = (length(levels(DR_PCA_SUBSET$Status)))))
+
+##################################
 # Determining the apparent 
 # discrimination performance
 # of the IF Algorithm
 ##################################
-max(OD_IF_PredictedScores)
-min(OD_IF_PredictedScores)
 Status <- ifelse(DR_PCA_SUBSET$Status=="Valid",0,1)
+
 (OD_IF_ROCCurveAUC <- AUC(OD_IF_PredictedScores, Status))
 
 ```
